--- a/src/pages/FavoritesPage.module.css
+++ b/src/pages/FavoritesPage.module.css
@@ -4,9 +4,16 @@
   align-items: center;
 }
 
+
 .favoritesContainer {
   display: flex;
-  gap: 3rem;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 200px;
+  width: 100%;
+  padding: 1rem;
+  box-sizing: border-box;
 }
 
 .favoritesArray {
@@ -34,4 +41,17 @@
 
 .favoriteCurrentTemperature {
   font-size: 1.5rem;
+}
+
+.loading {
+  text-align: center;
+  font-size: 1.2rem;
+  margin-top: 2rem;
+}
+
+.noData {
+  text-align: center;
+  color: gray;
+  font-size: 1rem;
+  margin-top: 2rem;
 }
